added projects links

--- a/index.html
+++ b/index.html
@@ -148,22 +148,22 @@
                 <h2 class="section-title">Projects</h2>
 
                 <div class="work__container bd-grid">
-                    <a href="" class="work__img">
+                    <a href="https://boitumeloh.github.io/projectclient/" class="work__img">
                         <img src="assets/img/work1.jpg" alt="">
                     </a>
-                    <a href="" class="work__img">
+                    <a href="https://boitumeloh.github.io/CRUDfitnessApp/" class="work__img">
                         <img src="assets/img/work2.jpg" alt="">
                     </a>
-                    <a href="" class="work__img">
+                    <a href="https://boitumeloh.github.io/TO-DO-list/" class="work__img">
                         <img src="assets/img/work3.jpg" alt="">
                     </a>
-                    <a href="" class="work__img">
+                    <a href="https://boitumeloh.github.io/calculator/" class="work__img">
                         <img src="assets/img/work4.jpg" alt="">
                     </a>
-                    <a href="" class="work__img">
+                    <a href="https://boitumeloh.github.io/calculator/" class="work__img">
                         <img src="assets/img/work5.jpg" alt="">
                     </a>
-                    <a href="" class="work__img">
+                    <a href="https://boitumeloh.github.io/Intro-to-programming/" class="work__img">
                         <img src="assets/img/work6.jpg" alt="">
                     </a>
                 </div>
