fixed the loading issues

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">I'am Boitumelo</h2>
-                        <p class="about__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate cum expedita quo culpa tempora, assumenda, quis fugiat ut voluptates soluta, aut earum nemo recusandae cumque perferendis! Recusandae alias accusamus atque.</p>           
+                        <p class="about__text">My name is Boitumelo Lefophane and I'm a Software Developer. I enjoy programming and bringing ideas to life using code. I leverage my knack for innovative ideas and creative imagination to solve anything from minor everday inconviniences to complex abstract problems through programming</p>           
                     </div>                                   
                 </div>
             </section>
@@ -86,7 +86,7 @@
                 <div class="skills__container bd-grid">          
                     <div>
                         <h2 class="skills__subtitle">Profesional Skills</h2>
-                        <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet, alias architecto consectetur error eum eaque sit.</p>
+                        <p class="skills__text">Here are few of my profesional skills and some more I am still learning</p>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxl-html5 skills__icon'></i>
