fixed the loading issues

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Boitumelo</span><br> Web Developer</h1>
+                    <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Boitumelo</span><br> Web Developer</h1>
 
                     <a href="#" class="button">Contact Me</a>
                 </div>
@@ -73,7 +73,7 @@
                     </div>
                     
                     <div>
-                        <h2 class="about__subtitle">I'am Boitumelo</h2>
+                        <h2 class="about__subtitle">I'm Boitumelo</h2>
                         <p class="about__text">My name is Boitumelo Lefophane and I'm a Software Developer. I enjoy programming and bringing ideas to life using code. I leverage my knack for innovative ideas and creative imagination to solve anything from minor everday inconviniences to complex abstract problems through programming</p>           
                     </div>                                   
                 </div>
