added images to projects

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
               href="https://boitumeloh.github.io/projectclient/"
               class="work__img"
             >
-              <img src="assets/img/work1.jpg" alt="" />
+              <img src="assets/img/tattoo1.jpg" alt="" />
             </a>
           </div>
 
@@ -189,34 +189,34 @@
             href="https://boitumeloh.github.io/CRUDfitnessApp/"
             class="work__img"
           >
-            <img src="assets/img/work2.jpg" alt="" />
+            <img src="assets/img/1-95068243.jpeg" alt="" />
           </a>
         </div>
         <div class="projects__header">
             <h2>To-do App</h2>
           <a href="https://boitumeloh.github.io/TO-DO-list/" class="work__img">
-            <img src="assets/img/work3.jpg" alt="" />
+            <img src="assets/img/to-do1.jpg" alt="" />
           </a>
         </div>
         <div class="projects__header">
             <h2>Calculator</h2>
           <a href="https://boitumeloh.github.io/calculator/" class="work__img">
-            <img src="assets/img/work4.jpg" alt="" />
+            <img src="assets/img/calculator1.jpg" alt="" />
           </a>
         </div>
         <div class="projects__header">
             <h2>Movie App</h2>
           <a href="https://boitumeloh.github.io/CRUDmovieapp/" class="work__img">
-            <img src="assets/img/work5.jpg" alt="" />
+            <img src="assets/img/movie1.jpg" alt="" />
           </a>
         </div>
         <div class="projects__header">
-            <h2>Portfolio</h2>
+            <h2>More Projects</h2>
           <a
             href="https://boitumeloh.github.io/Intro-to-programming/"
             class="work__img"
           >
-            <img src="assets/img/work6.jpg" alt="" />
+            <img src="assets/img/moreproject.jpg" alt="" />
           </a>
         </div>
         </div>
